working line up button

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,10 +8,12 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/colorChangingDancer.js"></script>
     <script src="src/movingDancer.js"></script>
+    <script src="src/lineUp.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
+      <a href="#" class="lineUpButton" data-line-up-function-name="lineUp">line dancers</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ColorChangingDancer">add a color changing dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MovingDancer">add a moving dancer</a>
