updated aliens and rockets

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -18,6 +18,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ColorChangingDancer">add a color changing dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MovingDancer">add a moving dancer</a>
           </div>
+    <img src="src/re.gif" class="earth" />
     <script src="src/init.js"></script>
   </body>
 </html>
